# euphonica

./: Cargo.toml  README.md  generate-cargo-sources.sh  io.github.htkhiem.Euphonica-dev.json  io.github.htkhiem.Euphonica.json  meson.build
data/: io.github.htkhiem.Euphonica.desktop.in  io.github.htkhiem.Euphonica.gschema.xml  io.github.htkhiem.Euphonica.metainfo.xml.in
src/: application.rs  euphonica.gresource.xml  main.rs  shortcuts-dialog.ui  utils.rs  window.rs  window.ui
src/cache/: controller.rs  mod.rs  placeholders.rs  sqlite.rs  state.rs
src/client/: background.rs  connection.rs  mod.rs  password.rs  state.rs  stream.rs  wrapper.rs
src/common/: album.rs  artist.rs  blend_mode.rs  content_stack.rs  content_view.rs  dynamic_playlist.rs  image_stack.rs  inode.rs  marquee.rs  mod.rs  picture_stack.rs  rating.rs  row_add_buttons.rs  row_edit_buttons.rs  song.rs  song_row.rs  sticker.rs  tags.rs  theme_selector.rs
src/common/paintables/: fade.rs
src/gtk/: content-stack.ui  content-view.ui  image-stack.ui  marquee.ui  picture-stack.ui  shortcuts-dialog.ui  sidebar.ui  song-row.ui  style.css
src/gtk/player/: bar.ui  output-controls.ui  output.ui  pane.ui  playback-controls.ui  queue-view.ui  seekbar2.ui  volume-knob.ui
src/gtk/preferences/: client.ui  dialog.ui  integrations.ui  library.ui  ui.ui
src/meta_providers/: base.rs  chain.rs  mod.rs  models.rs
src/meta_providers/lastfm/: controller.rs  models.rs
src/meta_providers/lrclib/: controller.rs  mod.rs  models.rs
src/meta_providers/musicbrainz/: controller.rs  models.rs
src/player/: bar.rs  controller.rs  knob.rs  mod.rs  output.rs  output_controls.rs  pane.rs  playback_controls.rs  queue_row.rs  queue_view.rs  ratio_center_box.rs  seekbar.rs  seekbar2.rs
src/player/fft_backends/: backend.rs  fft.rs  fifo.rs  mod.rs  pipewire.rs
src/preferences/: client.rs  dialog.rs  integrations.rs  library.rs  provider_row.rs  ui.rs
src/sidebar/: button.rs  sidebar.rs
