[package]
name = "euphonica"
version = "0.99.2"
edition = "2024"

[dev-dependencies]
idna = "1.0.0"     # CVE-2024-12242

[dependencies]
async-channel = "2.3.1"
chrono = "0.4.38"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
image = "0.25.1"
librsvg = "2.58.1"
mpd = { git = "https://github.com/htkhiem/rust-mpd.git", rev = "a8ddd7d624ee7ea2f4128e6df878e6b05fe5b0e7", features = ["serde"] }
once_cell = "1.19.0"
time = { version = "0.3.47", features = ["alloc", "formatting", "local-offset"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
bson = { version = "3.0.0", features = ["serde"] }
serde = "1.0.207"
serde_json = "1.0.124"
regex = "1.10.6"
rustc-hash = "2.0.0"
itertools = "0.13.0"
aho-corasick = "1.1.3"
musicbrainz_rs = { version = "0.12", features = ["blocking"], default-features = false }
mpris-server = "0.8.1"
async-lock = "3.4.0"
libblur = "0.14.4"
idna = "1.0.0"     # CVE-2024-12242
libc = "0.2.169"
spectrum-analyzer = "=0.5.2"
ashpd = "0.10.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
pipewire = { version = ">=0.9", features = ["v0_3_44"] }
duplicate = "2.0.0"
ringbuffer = "0.15.0"
rusqlite = { version = "0.37.0", features = ["time"] }
base64 = "0.22.1"
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
auto-palette = "0.6.0"
urlencoding = "2.1.3"
open = "5.3.2"
resolve-path = "0.1.0"
lru = "0.16.0"
nohash-hasher = "0.2.0"
libsecret = "=0.8"
zbus = { version = "5.12.0", features = ["tokio"], default-features = false}
derivative = "2.2.0"
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.9.2"
oneshot = "0.1.12"
asyncified = "0.6.2"
async-trait = "0.1.89"

[dependencies.gtk]
package = "gtk4"
version = "0.10"
features = ["gnome_48"]

[dependencies.uuid]
version = "1.9.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_8"]

[profile.dev]
debug = 1

[profile.release]
strip = true # Should reduce binary size on Linux
lto = true
